# python-pytest-testing-project-79

./: .coverage  Makefile  README.md
.github/workflows/: pyf-check.yml
hexlet-code/: Makefile  README.md  pyproject.toml  ru-hexlet-io-courses.html  ru-hexlet-io.html
hexlet-code/.github/workflows/: hexlet-check.yml
hexlet-code/page_loader/: __init__.py  loader.py  naming.py
hexlet-code/page_loader/scripts/: page_loader.py
hexlet-code/tests/: test_errors.py  test_format_name.py  test_loader.py
hexlet-code/tests/fixtures/: before.html
page_loader/: loader.py  naming.py
tests/: test_errors.py  test_format_name.py  test_loader.py
tests/fixtures/: after.html
