[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "beautifulsoup4",
]

[project.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page_loader"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "requests-mock>=1.12.1",
]
